--- a/android/build.gradle
+++ b/android/build.gradle
@@ -26,6 +26,8 @@ apply plugin: 'kotlin-android'
 
 android {
     compileSdkVersion 31
+    namespace = "app.mylekha.client.flutter_usb_printer"
+
 
     sourceSets {
         main.java.srcDirs += 'src/main/kotlin'
