--- a/android/build.gradle
+++ b/android/build.gradle
@@ -35,6 +35,9 @@ android {
     defaultConfig {
         minSdkVersion 16
     }
+    kotlinOptions {
+        jvmTarget = "1.8"
+    }
 }
 
 dependencies {
