--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,3 +1,5 @@
+package android
+
 group 'app.mylekha.client.flutter_usb_printer'
 version '1.0-SNAPSHOT'
 
@@ -9,7 +11,7 @@ buildscript {
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:4.1.0'
+        classpath 'com.android.tools.build:gradle:7.4.2'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     }
 }
