--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,13 +1,8 @@
-package android
-
-group 'app.mylekha.client.flutter_usb_printer'
-version '1.0-SNAPSHOT'
-
 buildscript {
     ext.kotlin_version = '1.7.10'
     repositories {
         google()
-        jcenter()
+        mavenCentral()
     }
 
     dependencies {
@@ -19,7 +14,7 @@ buildscript {
 rootProject.allprojects {
     repositories {
         google()
-        jcenter()
+        mavenCentral()
     }
 }
 
